feat: add parent model and service for renting/returning library items
- Added a parent model to represent a library item.
- Implemented a service to handle the rental and return operations of library items.