@@ -1,19 +1,21 @@
 package org.pollub.library.user.model;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonManagedReference;
 import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import org.pollub.library.item.model.LibraryItem;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-@SuppressWarnings("ALL")
 @Entity
 @Table(name = "user")
 @Getter
@@ -42,14 +44,19 @@ public class User implements UserDetails {
     @Enumerated(EnumType.STRING)
     @CollectionTable(name = "user_roles", joinColumns = @JoinColumn(name = "user_id"))
     @Column(name = "role")
+    @JsonIgnore()
     private Set<Role> roles;
+
+    @OneToMany(mappedBy = "rentedByUser", cascade = CascadeType.ALL)
+    @JsonManagedReference
+    private List<LibraryItem> listOfRentedItems = new ArrayList<>();
 
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream()
                 .map(role -> (GrantedAuthority) role::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
